// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSelect.ts should be clearable with prop, dirty and multi select 1`] = `

<div role="combobox"
     class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
>
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-select__slot">
        <div class="v-select__selections">
          <div class="v-select__selection v-select__selection--comma">
            1
          </div>
          <input autocomplete="on"
                 readonly="readonly"
                 type="text"
                 aria-readonly="false"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--clear">
            <i aria-hidden="true"
               class="v-icon v-icon--link material-icons theme--light"
            >
              $vuetify.icons.clear
            </i>
          </div>
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              $vuetify.icons.dropdown
            </i>
          </div>
        </div>
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <span name="message-transition"
              tag="div"
              class="v-messages__wrapper"
        >
        </span>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect.ts should be clearable with prop, dirty and single select 1`] = `

<div role="combobox"
     class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
>
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-select__slot">
        <div class="v-select__selections">
          <div class="v-select__selection v-select__selection--comma">
            1
          </div>
          <input autocomplete="on"
                 readonly="readonly"
                 type="text"
                 aria-readonly="false"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--clear">
            <i aria-hidden="true"
               class="v-icon v-icon--link material-icons theme--light"
            >
              $vuetify.icons.clear
            </i>
          </div>
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              $vuetify.icons.dropdown
            </i>
          </div>
        </div>
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <span name="message-transition"
              tag="div"
              class="v-messages__wrapper"
        >
        </span>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect.ts should use scoped slot for selection generation 1`] = `

<div role="combobox"
     class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
>
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-select__slot">
        <div class="v-select__selections">
          <div>
            foo - from slot
          </div>
          <input autocomplete="on"
                 readonly="readonly"
                 type="text"
                 aria-readonly="false"
          >
        </div>
        <div class="v-input__append-inner">
          <div class="v-input__icon v-input__icon--append">
            <i aria-hidden="true"
               class="v-icon material-icons theme--light"
            >
              $vuetify.icons.dropdown
            </i>
          </div>
        </div>
      </div>
      <div class="v-menu">
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <span name="message-transition"
              tag="div"
              class="v-messages__wrapper"
        >
        </span>
      </div>
    </div>
  </div>
</div>

`;

exports[`VSelect.ts should use slotted append-item 1`] = `

<div role="list"
     class="v-list v-sheet v-sheet--tile theme--light"
>
  <div aria-selected="false"
       role="listitem"
       tabindex="-1"
       class="v-list-item v-list-item--link theme--light"
  >
    <div class="v-list-item__content">
      <div class="v-list-item__title">
        foo
      </div>
    </div>
  </div>
  <div>
    foo
  </div>
</div>

`;

exports[`VSelect.ts should use slotted prepend-item 1`] = `

<div role="list"
     class="v-list v-sheet v-sheet--tile theme--light"
>
  <div>
    foo
  </div>
  <div aria-selected="false"
       role="listitem"
       tabindex="-1"
       class="v-list-item v-list-item--link theme--light"
  >
    <div class="v-list-item__content">
      <div class="v-list-item__title">
        foo
      </div>
    </div>
  </div>
</div>

`;
